--- a/package.json
+++ b/package.json
@@ -16,16 +16,12 @@
   },
   "main": "release/server/main.js",
   "devDependencies": {
-    "gulp": "~3.8.10",
-    "gulp-concat": "~2.4.3",
-    "gulp-footer": "~1.0.5",
-    "gulp-header": "~1.2.2",
-    "gulp-sourcemaps": "~1.3.0",
-    "gulp-tslint": "^1.4.3",
-    "gulp-typescript": "~2.4.2",
-    "merge2": "^0.3.1",
-    "rimraf": "~2.2.8",
-    "yargs": "~1.3.3"
+    "gulp": "~3.8.11",
+    "gulp-sourcemaps": "~1.5.2",
+    "gulp-tslint": "^2.0.0",
+    "gulp-typescript": "~2.6.0",
+    "merge2": "^0.3.5",
+    "rimraf": "~2.3.3"
   },
   "repository": {
     "type": "git",
