--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
   },
   "main": "release/js/server/main.js",
   "devDependencies": {
-    "gulp": "~3.8.11",
-    "gulp-footer": "^1.0.5",
-    "gulp-header": "^1.2.2",
+    "gulp": "~3.9.0",
+    "gulp-footer": "~1.0.5",
+    "gulp-header": "~1.2.2",
     "gulp-sourcemaps": "~1.5.2",
-    "gulp-tslint": "^2.0.0",
-    "gulp-typescript": "~2.6.0",
-    "merge2": "^0.3.5",
-    "rimraf": "~2.3.3",
+    "gulp-tslint": "~3.0.1-beta",
+    "gulp-typescript": "~2.7.6",
+    "merge2": "~0.3.5",
+    "rimraf": "~2.3.4",
     "typescript": "^1.5.0-beta"
   },
   "repository": {
@@ -34,7 +34,7 @@
     "node": ">=0.12"
   },
   "dependencies": {
-    "cookie": "^0.1.2",
-    "mime": "^1.3.4"
+    "cookie": "~0.1.3",
+    "mime": "~1.3.4"
   }
 }
