--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
   "devDependencies": {
     "gulp": "~3.9.0",
     "gulp-footer": "~1.0.5",
-    "gulp-header": "~1.2.2",
+    "gulp-header": "~1.7.1",
     "gulp-sourcemaps": "~1.5.2",
-    "gulp-tslint": "~3.0.1-beta",
-    "gulp-typescript": "~2.7.6",
     "merge2": "~0.3.5",
     "rimraf": "~2.3.4",
-    "typescript": "^1.5.0-beta"
+    "gulp-tslint": "~3.3.0-beta",
+    "gulp-typescript": "^2.9.0",
+    "tslint": "^2.5.0"
   },
   "repository": {
     "type": "git",
