Use TS1.6 module resolution for definition file
Deleted definitions.d.ts, moved release/js and release/dts to release

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "name": "Ivo Gabe de Wolff",
     "url": "http://ivogabe.com/"
   },
-  "main": "release/js/server/main.js",
+  "main": "release/server/main.js",
+  "typings": "release/server/main.d.ts",
   "devDependencies": {
     "gulp": "~3.9.0",
     "gulp-footer": "~1.0.5",
