--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "gulp": "~3.9.0",
     "gulp-footer": "~1.0.5",
     "gulp-header": "~1.7.1",
-    "gulp-sourcemaps": "~1.5.2",
-    "gulp-tslint": "~3.3.0-beta",
+    "gulp-sourcemaps": "~1.6.0",
+    "gulp-tslint": "~4.2.1",
     "gulp-typescript": "^2.10.0",
     "merge2": "~0.3.6",
-    "rimraf": "~2.4.3",
-    "tslint": "^2.5.0",
+    "rimraf": "~2.5.0",
+    "tslint": "^3.2.0-dev.2",
     "typescript": "^1.8.0-dev.20151223"
   },
   "repository": {
@@ -36,7 +36,7 @@
     "node": ">=4.0.0"
   },
   "dependencies": {
-    "cookie": "~0.2.2",
+    "cookie": "~0.2.3",
     "mime": "~1.3.4"
   }
 }
